<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            android:title="@string/videos_drawer" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/playlists_drawer" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_drawer" />
    </group>

    <group
        android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_twitch"
            android:icon="@drawable/ic_twitch"
            android:title="@string/twitch_drawer" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_drawer" />
    </group>

</menu>
